tests/baselines/reference/symbolProperty10(strict=true).errors.txt
symbolProperty10.ts(2,5): error TS2564: Property '[Symbol.iterator]' has no initializer and is not definitely assigned in the constructor.
symbolProperty10.ts(2,26): error TS7008: Member 'x' implicitly has an 'any' type.
symbolProperty10.ts(2,29): error TS7008: Member 'y' implicitly has an 'any' type.
symbolProperty10.ts(5,27): error TS7008: Member 'x' implicitly has an 'any' type.
symbolProperty10.ts(10,5): error TS2322: Type 'I' is not assignable to type 'C'.
  Types of property '[Symbol.iterator]' are incompatible.
    Type '{ x: any; } | undefined' is not assignable to type '{ x: any; y: any; }'.
      Type 'undefined' is not assignable to type '{ x: any; y: any; }'.


==== symbolProperty10.ts (5 errors) ====
    class C {
        [Symbol.iterator]: { x; y };
        ~~~~~~~~~~~~~~~~~
!!! error TS2564: Property '[Symbol.iterator]' has no initializer and is not definitely assigned in the constructor.
                             ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
                                ~
!!! error TS7008: Member 'y' implicitly has an 'any' type.
    }
    interface I {
        [Symbol.iterator]?: { x };
                              ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    }
    
    var i: I;
    i = new C;
    var c: C = i;
        ~
!!! error TS2322: Type 'I' is not assignable to type 'C'.
!!! error TS2322:   Types of property '[Symbol.iterator]' are incompatible.
!!! error TS2322:     Type '{ x: any; } | undefined' is not assignable to type '{ x: any; y: any; }'.
!!! error TS2322:       Type 'undefined' is not assignable to type '{ x: any; y: any; }'.